--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,9 @@ dependencies {
 	compile 'org.apache.httpcomponents:httpclient:4.5'
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8' 
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4' 
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
+
 }
