--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
+
+
 debug=true
 #
 #spring.datasource.url=jdbc:mysql://localhost:3306/bluemix?useUnicode=true&charaterEncoding=utf-8
