--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	
+	compile 'org.json:json:20171018'
+	
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.16.8' 
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4' 
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
