--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ debug=true
 #spring.datasource.password=123456789
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lotte?useUnicode=true&charaterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://lotteojt.chm71mar95wp.ap-northeast-2.rds.amazonaws.com/ojt?useUnicode=true&charaterEncoding=utf-8
+spring.datasource.username=rootuser
+spring.datasource.password=12345678a
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
