--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.http.multipart.max-request-size=10MB
 
 debug=true
 #
-#spring.datasource.url=jdbc:mysql://localhost:3306/bluemix?useUnicode=true&charaterEncoding=utf-8
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.sql-script-encoding = UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/ojt?useUnicode=true&charaterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.sql-script-encoding = UTF-8
 
 
 #spring.datasource.url=jdbc:mysql://lotte.chm71mar95wp.ap-northeast-2.rds.amazonaws.com
@@ -19,10 +19,10 @@ debug=true
 #spring.datasource.password=123456789
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lotte?useUnicode=true&charaterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://lotteojt.chm71mar95wp.ap-northeast-2.rds.amazonaws.com/ojt?useUnicode=true&charaterEncoding=utf-8
+#spring.datasource.username=rootuser
+#spring.datasource.password=12345678a
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
 mybatis.config=classpath:mybatis-config.xml
