--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.http.multipart.max-request-size=10MB
 
 debug=true
 #
-#spring.datasource.url=jdbc:mysql://localhost:3306/bluemix?useUnicode=true&charaterEncoding=utf-8
+#spring.datasource.url=jdbc:mysql://localhost:3306/lotteojt?useUnicode=true&charaterEncoding=utf-8
 #spring.datasource.username=root
-#spring.datasource.password=root
+#spring.datasource.password=1234
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 #spring.datasource.sql-script-encoding = UTF-8
 
