--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,13 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "war"
 
 group = 'com.lotte'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
+war.archiveName "ROOT.war"
 
 repositories {
 	mavenCentral()
